More formatting to prevent image distortion and horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -13,5 +13,8 @@
     height: 10vh;
 }
 
-
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
 
